# ShadowScan

./: LICENSE  README.md  pyproject.toml
core/: enpoint_prober.py  report_generator.py  secret_scanner.py  zombie_detector.py
rules/: entropy_config.yaml  secret_patterns.yaml
