[project]
name="shadowscan"
version="0.1.0"
description="Read-only API security recon - zombie endpoint and secret leakage detection"

authors=[
	{name="Sankalp"}
]

readme="README.md"

requires-python="=>3.10"
license={text="MIT"}
dependencies=[
	"typer>=0.12.0",
	"requests>=2.31.0",
	"pyyaml>=6.0",
	"rich>=13.7.0",
	"pydantic>=2.6.0",
]


[project.optional-dependencies]
dev=[
	"pytest>=8.0.0",
	"black>=24.0.0",
	"ruff>=0.3.0",
]


[project.scripts]
shadowscan = "shadowscan.cli:app"


[build-system]
requires=["hatchling"]
build-backend="hatchling.build"


[tool.black]
line-length=100
target-version=["py310"]


[tool.ruff]
line-length=100
target-version=["py310"]


[tool.ruff.lint]
select=["E","F","I","UP"]

[tool.pytest.ini_options]
testpaths=['tests']

